# ogon

./: meson.build  meson_options.txt
backend/: meson.build  protocol.c
doc/: ICPProtocol.md
include/ogon/: backend.h  meson.build  version.h.in
misc/: meson.build
protocols/protobuf/: ICP.proto  backend.proto  meson.build
protocols/thrift/: meson.build  otsapi.thrift
protocols/thrift/otsapi/: meson.build
rdp-server/: backend.c  channels.c  frontend.c  meson.build  peer.c  state.c
rdp-server/icp/: icp.c  icp_client_stubs.c  icp_client_stubs.h  icp_server_stubs.c  meson.build
rdp-server/icp/pbrpc/: pbrpc.c  pbrpc.h
session-manager/: CMakeLists.txt
session-manager/common/call/: CallInPropertyBulk.cpp
session-manager/common/pbRPC/: RpcEngine.cpp
session-manager/otsapi/: meson.build
subprojects/: thrift.wrap
